--- a/PhoneBook.AdonetLayer/PhoneBook.AdonetLayer.csproj
+++ b/PhoneBook.AdonetLayer/PhoneBook.AdonetLayer.csproj
@@ -4,13 +4,14 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{1613C210-5F60-44B7-9204-33BAC664BF33}</ProjectGuid>
+    <ProjectGuid>{FB0C75B4-9637-4113-B70F-ECDB0754AD15}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>BusinessLogic</RootNamespace>
-    <AssemblyName>BusinessLogic</AssemblyName>
+    <RootNamespace>PhoneBook.AdonetLayer</RootNamespace>
+    <AssemblyName>PhoneBook.AdonetLayer</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <Deterministic>true</Deterministic>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -41,14 +42,22 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Services\ContactService.cs" />
-    <Compile Include="Services\GroupService.cs" />
+    <Compile Include="Properties\Settings.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTimeSharedInput>True</DesignTimeSharedInput>
+      <DependentUpon>Settings.settings</DependentUpon>
+    </Compile>
+    <Compile Include="Repositories\BaseRepository.cs" />
+    <Compile Include="Repositories\GroupRepository.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\PhoneBook.AdonetLayer\PhoneBook.AdonetLayer.csproj">
-      <Project>{fb0c75b4-9637-4113-b70f-ecdb0754ad15}</Project>
-      <Name>PhoneBook.AdonetLayer</Name>
-    </ProjectReference>
+    <None Include="app.config" />
+    <None Include="Properties\Settings.settings">
+      <Generator>SettingsSingleFileGenerator</Generator>
+      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
+    </None>
+  </ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="..\PhoneBook.Models\PhoneBook.Models.csproj">
       <Project>{31684FEC-B085-41BF-9C5B-705A6A2572DA}</Project>
       <Name>PhoneBook.Models</Name>
