--- a/PhoneBook.API/PhoneBook.API.csproj
+++ b/PhoneBook.API/PhoneBook.API.csproj
@@ -46,6 +46,12 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.dll</HintPath>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.8.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.1.0.8\lib\net45\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.dll</HintPath>
     </Reference>
@@ -224,7 +230,9 @@
     <Content Include="Scripts\modernizr-2.6.2.js" />
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </Content>
@@ -261,9 +269,9 @@
       <Project>{1613c210-5f60-44b7-9204-33bac664bf33}</Project>
       <Name>BusinessLogic</Name>
     </ProjectReference>
-    <ProjectReference Include="..\PhoneBook.Models\PhoneBook.Models.csproj">
-      <Project>{31684fec-b085-41bf-9c5b-705a6a2572da}</Project>
-      <Name>PhoneBook.Models</Name>
+    <ProjectReference Include="..\PhoneBook.EfDataLayer\PhoneBook.EfDataLayer.csproj">
+      <Project>{f8beae93-763d-4874-bfac-61bc75781234}</Project>
+      <Name>PhoneBook.EfDataLayer</Name>
     </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
