--- a/PhoneBook.API/Web.config
+++ b/PhoneBook.API/Web.config
@@ -10,6 +10,10 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
+  <connectionStrings>
+    <add name="PhoneBookEntities" connectionString="metadata=res://*/DataModel.PBData.csdl|res://*/DataModel.PBData.ssdl|res://*/DataModel.PBData.msl;provider=System.Data.SqlClient;provider connection string=&quot;
+      Initial Catalog=PhoneBook;Integrated Security=false;User ID=phonebook;Password=phonebook;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.6.1" />
