--- a/Phonebook.DapperLayer/app.config
+++ b/Phonebook.DapperLayer/app.config
@@ -1,15 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
     <configSections>
-        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-            <section name="Phonebook.DapperLayer.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="Phonebook.DapperLayer.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
         </sectionGroup>
     </configSections>
-    <userSettings>
+    <applicationSettings>
         <Phonebook.DapperLayer.Properties.Settings>
             <setting name="PBPhonebook" serializeAs="String">
                 <value>Data Source=VLADYSLAV-PC;Initial Catalog=PhoneBook;Integrated Security=false;User ID=phonebook;Password=phonebook;</value>
             </setting>
         </Phonebook.DapperLayer.Properties.Settings>
-    </userSettings>
+    </applicationSettings>
 </configuration>
